--- a/index.html
+++ b/index.html
@@ -144,5 +144,6 @@ $.passy.threshold = {
 		$output.text(output[strength]);
 	});
 </script>
+<script>!function(e,a,t,n,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,o=a.createElement(t),s=a.getElementsByTagName(t)[0],o.async=1,o.src=n,s.parentNode.insertBefore(o,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-19596829-13","auto"),ga("send","pageview");</script>
 </body>
 </html>
